--- a/reg.html
+++ b/reg.html
@@ -1,126 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LearningSpot Login</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #222;
-            color: #FFD700;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-        }
+<doctype>
+    <html>
+        <head>
+            <button onclick="window.location.href='index.html'">Go to Index</button>
+        </head>
+    </html>
+</doctype>
 
-        .login-container {
-            width: 80%;
-            max-width: 600px;
-            padding: 40px;
-            background-color: #333;
-            border-radius: 10px;
-        }
 
-        .logo {
-            font-size: 2em;
-            font-weight: bold;
-            margin-bottom: 20px;
-            color: #4169E1;
-        }
 
-        .login-title {
-            font-size: 1.5em;
-            margin-bottom: 30px;
-        }
 
-        .input-group {
-            margin-bottom: 20px;
-        }
-
-        .input-group input {
-            width: calc(100% - 22px);
-            padding: 10px;
-            border: 2px solid #4169E1;
-            border-radius: 5px;
-            background-color: #444;
-            color: #FFD700;
-            box-sizing: border-box;
-        }
-
-        .input-group input:focus {
-            outline: none;
-            border-color: #6495ED;
-        }
-
-        .side-text {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 30px;
-            font-size: 0.9em;
-        }
-
-        .side-text div {
-            width: 45%;
-            text-align: left;
-        }
-
-        .create-account {
-            margin-top: 20px;
-        }
-
-        .create-account a {
-            color: #4169E1;
-            text-decoration: none;
-        }
-
-        .create-account a:hover {
-            text-decoration: underline;
-        }
-
-    </style>
-</head>
-<body>
-    <div class="login-container">
-        <div class="logo">LEARNINGSPOT</div>
-        <div class="login-title">LOGIN</div>
-
-        <div class="side-text">
-            <div>Give kids the experience of the greatness of learning!</div>
-            <div>Have a one month free trial. Don't need to enter any info for the trial!</div>
-        </div>
-
-        <form id="loginForm">
-            <div class="input-group">
-                <input type="text" id="username" placeholder="EMAIL OR USERNAME">
-            </div>
-            <div class="input-group">
-                <input type="password" id="password" placeholder="PASSWORD OR LOGIN KEY">
-            </div>
-            <input type="submit" value="Login" style="display: none;">
-        </form>
-
-        <div class="create-account">
-            Don't have a account? <a href="#">Create one!</a>
-        </div>
-    </div>
-
-    <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-
-            if (username === 'icecubev1' && password === 'icecubev1') {
-                window.location.href = 'https://icecubev1.netlify.app/real-home.html';
-            } else {
-                alert('Incorrect email or password.');
-            }
-        });
-    </script>
-</body>
-</html>
