--- a/reg.html
+++ b/reg.html
@@ -1,7 +1,7 @@
 <doctype>
     <html>
         <head>
-            <button onclick="window.location.href='index.html'">Go to Index</button>
+            <button onclick="window.location.href='reg.html'">Go to Index</button>
         </head>
     </html>
 </doctype>
